2014-06-25 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Adjust extension constraints
	* Remove useless error message from syslog regarding non-matching authCode
	* Update version to 3.1.3

2014-05-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #58964: Additional Fields not working after update on 6.2
	* Follow-up to Resolves #58964: Additional Fields not working after update on 6.2
	* Resolves #58997: Labels for field "house_no" are missing in locallang.xml
	* Resolves #52037: Erroneous mailto link in text version of acceptance email to admin after confirmation

2014-05-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Second argument of tx_srfeuserregister_auth::deleteRecord should be an array
	* Fix some default language labels
	* Missing value for BACK_URL marker
	* Missing fieldset element on login form in default template

2014-04-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Correction to default template for sr_freecap

2014-04-10 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* First argument of tx_srfeuserregister_auth->aCAuth should be an array

2014-04-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57650: Fatal error: Call to a member function getSubmit() on a non-object

2014-04-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Correction to manual regarding removed generatePassword option

2014-03-30 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57433: Wrong call of $this->email->compile

2014-03-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57236: Fatal error in class.tx_srfeuserregister_lang.php on line 64 in TYPO3 4.5
	* Update version to 3.1.2

2014-03-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow up to #57091: Class 'Tx_SrFeuserRegister_Utility_UrlUtility' not found in TYPO3 4.5
	* Update version to 3.1.1

2014-03-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57091: Class 'Tx_SrFeuserRegister_Utility_UrlUtility' not found in TYPO3 4.5

2014-03-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>